--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="js/underscore.min.js"></script>
   <script src="js/tictactoe.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
   </body>
 </html>
 
